# whisper_rag_chatbot

./: .gitignore  chatbot.bat  main.py  main_gui.py  main_gui_confidence.py  main_gui_reranker.py  main_gui_styled.py  pyproject.toml
local_docs/: extracted_qa.txt
